--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "invaders-game",
   "version": "1.0.0",
   "description": "Invaders!",
-  "main": "index.js",
+  "main": "dist/main.js",
+  "homepage": "https://imason5.github.io/invaders-game",
   "scripts": {
+    "build": "webpack --mode production",
+    "deploy": "npm run build && gh-pages -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,5 +14,8 @@
   "devDependencies": {
     "webpack": "^5.78.0",
     "webpack-cli": "^5.0.1"
+  },
+  "dependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
